force-app/main/default/objects/Invoice_Discount__c/Invoice_Discount__c.object-meta.xml
<CustomObject>
    <label>Invoice Discount</label>
    <nameField>
        <displayFormat>IVDIS-{0000}</displayFormat>
        <label>Invoice Discount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>