force-app/main/default/objects/Invoice_Discount__c/fields/GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>GST_Amount__c</fullName>
    <inlineHelpText>If left empty, Amount, GST Amount, and GST Code will be taken from the Discount selected</inlineHelpText>
    <label>GST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>