force-app/main/default/objects/Invoice_Discount__c/fields/GST_Mode__c.field-meta.xml
<CustomField>
    <fullName>GST_Mode__c</fullName>
    <inlineHelpText>Full - Exclusive of GST
Nett - Inclusive of GST</inlineHelpText>
    <label>GST Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GST_Mode</valueSetName>
    </valueSet>
</CustomField>