force-app/main/default/objects/Invoice_Discount__c/validationRules/Cannot_create_new_Invoice_Discount.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_create_new_Invoice_Discount</fullName>
    <active>true</active>
    <description>Cannot create new Invoice Discount if the Invoice Status is not Draft</description>
    <errorConditionFormula>NOT(ISPICKVAL(Invoice_Line_Item__r.Invoice__r.Status__c, &quot;Draft&quot;))</errorConditionFormula>
    <errorMessage>Invoice has been generated</errorMessage>
</ValidationRule>